# sandbox-rust

./: .gitignore  Makefile  README.md
.github/workflows/: test.yml
docs/: index.md
example-app/: Cargo.toml
example-app/src/: main.rs
example-lib/: Cargo.toml
example-lib/src/: module_a.rs  module_b.rs
example-lib/src/module_b/: module_c.rs
example-smartcore-app/: Cargo.toml
